[package]
edition = "2018"
name = "cuteos"
version = "0.1.0"

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
default         = []
board_qemu      = []
board_art-pi    = ["stm32h7", "stm32h7xx-hal"]
logs            = []


[dependencies]
lazy_static     = { version = "1.4.0", default-features = false, features = ["spin_no_std"]}
embedded-hal    = { version = "0.2.6", features = ["unproven"] }
panic-halt      = "^0.2.0"    # Panic handler


[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m        = "^0.7.4"      # Access to the generic ARM peripherals
cortex-m-rt     = "^0.6.12"     # Startup code for the ARM Core
stm32h7         = {version = "0.14.0", features = ["stm32h743v", "rt"], optional = true}
stm32h7xx-hal   = {version = "0.11.0", features = ["stm32h743v","rt"], optional = true}

[target.riscv64gc-unknown-none-elf.dependencies]

[profile.dev]
debug = true
opt-level = 2

[profile.release]
lto = true
opt-level = "z"
